# Paragon-core

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
src/: lib.rs  main.rs
src/adapters/: channel_adapter.rs  data_loader.rs  graphql_data_inserter.rs  mod.rs  rest_data_inserter.rs  websocket_data_sender.rs
src/application/: context.rs  mod.rs
src/application/candle/: consume.rs  mod.rs  publish.rs
src/application/data/: consume.rs
src/application/structures/: fvg.rs  mod.rs  session.rs  structures.rs  trend.rs
src/connections/: auth.rs  database.rs  mod.rs  websocket.rs
src/domain/: entities.rs  ports.rs
src/domain/entities/: candle.rs  data.rs  direction.rs  fvg.rs  mod.rs  session.rs  structures.rs  symbol.rs  timerange.rs  trend.rs
src/handlers/: candle.rs  mod.rs  sessions.rs  structures.rs  trends.rs
src/utils/: mod.rs  temporary.rs  utils.rs
