[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
planus = { version = "=1.1.1" } # Temporary fix for planus issue https://github.com/pola-rs/polars/issues/24208
polars = { version = "0.50.0", features = ["parquet", "timezones"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-scoped = "0.2.0"
