[package]
name = "core"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = "6.1.0"
once_cell = "1.21.3"
planus = { version = "=1.1.1" } # Temporary fix for planus issue https://github.com/pola-rs/polars/issues/24208
polars = { version = "0.50.0", features = ["parquet", "timezones"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-scoped = "0.2.0"
