[package]
name = "core"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = "6.1.0"
futures-util = "0.3.31"
http = "1.3.1"
once_cell = "1.21.3"
polars = { version = "0.50.0", features = ["parquet", "timezones"] }
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-scoped = "0.2.0"
tokio-tungstenite = "0.27.0"
url = "2.5.7"
